# UTCS-429H-Sp24

./: .gitignore  CMakeLists.txt  FileIO.c  README.md  arrays_and_strings.c  flow_control.c  fp_adder  general_tips.md  sizeof.c  structs.c
FileIO/: console  console.c  files.c
c-snippets/: fileio.c  passing_args_to_functions.c  pointers.c  sample.txt
cmake/: CMakeLists.txt
example/: CMakeLists.txt  assembler.c  simulator.c
exercises/wk2/: wk2exercise_ans  wk2exercise_ans.c
hw8/: Makefile  hw8_testbench.sv
make/: Makefile  main  main.c
shellscript/: build.sh  filea.c  filea.h  fileb.c  fileb.h
